--- a/theme/css/statocles-default.css
+++ b/theme/css/statocles-default.css
@@ -3,51 +3,69 @@
  * Basic style
  ************************************************/
 
+html {
+    font-size: 16px;
+    height: 100%;
+}
 body {
-    /* Raleway looks terrible, and in some cases is hard to read */
     font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 20px;
+    height: 100%;
+    background: #f1f5f6;
+    color: #666;
 }
-
+h1, h2, h3, h4, h5 {
+    font-weight: bold;
+    margin: 0;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
 h1 {
-    font-size: 3.5em;
+    font-size: 3.5rem;
+    line-height: 3.5rem;
 }
-
 h2 {
-    font-size: 2.75em;
+    font-size: 2.75rem;
+    line-height: 2.75rem;
 }
-
 h3 {
-    font-size: 2.25em;
+    font-size: 2.25rem;
+    line-height: 2.25rem;
 }
-
 h4 {
-    font-size: 1.75em;
+    font-size: 1.75rem;
+    line-height: 1.75rem;
 }
-
 h5 {
-    font-size: 1.3em;
+    font-size: 1.3rem;
+    line-height: 1.3rem;
+}
+li {
+    margin-bottom: 0rem;
+}
+blockquote {
+    font-style: italic;   
 }
 
+/* Code */
 code {
-    /* Only pre should set nowrap */
+    padding: .2rem .5rem;
+    margin: 0 .2rem;
+    font-size: 90%;
     white-space: normal;
+    background: #f1f5f6;
+    border: 1px solid #e4e8e9;
+    border-radius: 4px; 
 }
-
-/* Fix <p> inside <li> leaving the list bullet on its own line in Firefox */
-ul {
-    list-style: circle outside;
-    margin-left: 1.4em;
-}
-ol {
-    list-style: decimal outside;
-    margin-left: 1.4em;
-}
-
-ul ul, ul ol, ol ul, ol ol {
-    /* Fix each successive layer of lists getting smaller and smaller.
-     * After three layers of lists, it's too small to read well
-     */
-    font-size: 100%;
+pre > code {
+    display: block;
+    padding: 1rem 1.5rem;
+    white-space: pre; 
+    overflow-x: auto;
+    max-width: 100%;
 }
 
 .button.disabled {
@@ -88,12 +106,6 @@ section:target {
     border-top: 2px dashed #777;
 }
 
-/** Don't allow <pre> to push too much */
-pre {
-    max-width: 100%;
-    overflow-x: scroll;
-}
-
 /**
  * Don't allow main content images to push things around
  */
@@ -114,20 +126,6 @@ a[rel=external]::after {
  * Classes
  ************************************************/
 
-ol.bare, ul.bare {
-    list-style-type: none;
-    margin-left: 0;
-}
-
-ol.list-inline, ul.list-inline {
-    margin: 0 0 2.5rem 0;
-}
-
-ol.list-inline li, ul.list-inline li {
-    display: inline-block;
-    margin: 0;
-}
-
 img.u-pull-left, img.u-pull-right {
     /* Give some padding so the text isn't too close */
     padding: 0.2em;
@@ -137,10 +135,32 @@ img.u-pull-left, img.u-pull-right {
  * Grid
  ************************************************/
 
-.column, .columns {
-    margin-left: 2%;
-    padding-left: 1%;
-    padding-right: 1%;
+.container {
+    position: relative;
+    height: 100%;
+    width: 1140px;
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box; 
+    background: #fff;
+    border-right: 1px solid #e4e8e9;
+}
+.column,
+.columns {
+    float: left;
+    box-sizing: border-box; 
+    margin-left: 0;
+}
+
+.left.column  { width: 325px; }
+.right.column { width: 814px; }
+
+.container:after,
+.row:after,
+.u-cf {
+    content: "";
+    display: table;
+    clear: both; 
 }
 
 /************************************************
@@ -184,38 +204,149 @@ img.u-pull-left, img.u-pull-right {
 }
 
 /** Sidebar widget */
+.sidebar {
+    position: fixed;
+    background: #20aaea;
+    color: #fff;
+    padding: 0;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+    box-sizing: border-box;
+    font-size: 1rem;
+    height: 100%;
+    width: 325px;
+}
 .sidebar h1,
 .sidebar h2,
 .sidebar h3,
 .sidebar h4,
 .sidebar h5,
 .sidebar h6 {
-    margin-bottom: 0.2em;
+    margin-bottom: 0.2rem;
 }
 
 .sidebar h1 {
-    font-size: 2.25em;
+    font-size: 2.25rem;
 }
 
 .sidebar h2 {
-    font-size: 1.75em;
+    font-size: 1.75rem;
 }
 
 .sidebar h3 {
-    font-size: 1.3em;
+    font-size: 1.3rem;
 }
 
 .sidebar h4 {
-    font-size: 1.1em;
+    font-size: 1.1rem;
 }
 
 .sidebar h5 {
-    font-size: 1em;
+    font-size: 1rem;
 }
 
-.sidebar {
-    font-size: 0.8em;
+.sidebar a, .sidebar a:visited {
+    color: #fff;
+    text-decoration: none;
 }
+.sidebar a:hover {
+    text-decoration: underline;
+}
+
+.sidebar a.home, .sidebar a.home:visited {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 15px;
+    padding-left: 1rem;
+    display: block;
+    -webkit-transition: 0.2s linear;
+    -moz-transition: 0.2s linear;
+    -ms-transition: 0.2s linear;
+    -o-transition: 0.2s linear;
+    transition: 0.2s linear;
+    border-left: 4px solid transparent;
+    font-size: .6rem;
+    line-height: .6rem;
+}
+.sidebar a.home:hover {
+    text-decoration: underline;
+    text-decoration: none;
+}
+.sidebar a.home:hover {
+    background: #2980b9;
+    background: #5cb3ec;
+    background: rgba(255, 255, 255, 0.4);
+}
+.sidebar .fa-home {
+    text-align: center;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    padding-right: 0.5rem;
+}
+
+.sidebar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.sidebar ul li {
+  /* Sub Menu */
+}
+.sidebar ul li a {
+  display: block;
+  background: #3498db;
+  background: #20aaea;
+  padding: 10px 15px;
+  padding-left: 1rem;
+  color: #fff;
+  text-decoration: none;
+  -webkit-transition: 0.2s linear;
+  -moz-transition: 0.2s linear;
+  -ms-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
+  transition: 0.2s linear;
+  border-left: 4px solid transparent;
+  border-bottom: 1px solid #20aada;
+}
+.sidebar ul li a:hover {
+  background: #2980b9;
+  background: #5cb3ec;
+  background: rgba(255, 255, 255, 0.4);
+}
+.sidebar ul li a .fa {
+  width: 16px;
+  text-align: center;
+  margin-right: 5px;
+}
+.sidebar ul li a .badge {
+  display: inline-block;
+  background: #fff;
+  /* IE Fallback */
+  background: rgba(255, 255, 255, 0.2);
+  padding: 3px 7px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 800;
+}
+.sidebar ul li ul li a {
+  background: #444;
+  background: rgba(255, 255, 255, 0.4);
+  border-left: 4px solid transparent;
+  padding-left: 1rem;
+  border-bottom: 1px solid #77c7f7;
+}
+.sidebar ul li ul li a:hover {
+  background: #333;
+  background: rgba(255, 255, 255, 0.3);
+  border-left: 4px solid #3498db;
+}
+.sidebar .right {
+  float: right;
+}
+.sidebar .left {
+  float: left;
+}
+
 
 /** Pager widget */
 ul.pager {
@@ -280,6 +411,57 @@ footer .tagline {
 .tags {
     float: right;
     margin-bottom: 0;
+}
+
+/** MVP */
+.full-height {
+    height: 100%;
+}
+main {
+    background: #fff;
+    padding: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    font-family: sans-serif;
+    font-weight: normal;
+}
+.title-page {
+    box-sizing: border-box;
+    text-align: center;
+    font-family: sans-serif;
+}
+#title1 {
+    font-size: 6rem;
+    font-weight: bold;
+    line-height: 6rem;
+}
+#title2 {
+    font-size: 8.6rem;
+    font-weight: bold;
+    line-height: 6rem;
+}
+#title3 {
+    font-size: 14.4rem;
+    font-weight: bold;
+    line-height: 12rem;
+}
+#subtitle1 {
+    font-size: 2.54rem;
+    line-height: 2rem;
+}
+#subtitle2 {
+    font-size: 1.3rem;
+    line-height: 2rem;
+}
+#subtitle3 {
+    margin-top: 1rem;
+    font-size: 1rem;
+    line-height: 1rem;
+}
+
+/* Misc */
+.highlight {
+    color: #796eff;
 }
 
 /************************************************
