--- a/theme/css/statocles-default.css
+++ b/theme/css/statocles-default.css
@@ -266,7 +266,6 @@ main {
     color: #fff;
     text-decoration: none;
     padding: 1rem;
-    border-bottom: 1px solid transparent;
     margin-top: 1.5rem;
     margin-bottom: 2rem;
 }
@@ -318,6 +317,7 @@ main {
     -o-transition: 0.2s linear;
     transition: 0.2s linear;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #0000000f;
 }
 .sidebar ul li a:hover {
     background: rgba(255, 255, 255, 0.3);
@@ -333,8 +333,8 @@ main {
     padding-left: 1rem;
     background: rgba(255, 255, 255, 0.4);
     border-left:   4px solid rgba(255, 255, 255, 0.5);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #0000000f;
 }
 .sidebar ul li ul li a:hover {
     background: rgba(255, 255, 255, 0.3);
